A bit narrower window.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,9 +5,10 @@ html {
 }
 
 body {
-  min-width: 357px;
+  min-width: 300px;
   overflow-x: hidden;
   padding: 10px;
+  font-size: 14px;
 }
 
 #main-navigation {
