Display completed task differently on Activities.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -85,6 +85,11 @@ ul.open-task-list {
     .log-duration {
       text-align: right;
     }
+
+    td.completed a {
+      text-decoration: line-through;
+      color: gray;
+    }
   }
 }
 
